tests/baselines/reference/parser536727.errors.txt
tests/cases/conformance/parser/ecmascript5/RegressionTests/parser536727.ts(7,5): error TS2345: Argument of type '() => (x: 文字) => 文字' is not assignable to parameter of type '(x: 文字) => 文字'.
  Type '(x: 文字) => 文字' is not assignable to type '文字'.
tests/cases/conformance/parser/ecmascript5/RegressionTests/parser536727.ts(8,5): error TS2345: Argument of type '() => (x: 文字) => 文字' is not assignable to parameter of type '(x: 文字) => 文字'.
  Type '(x: 文字) => 文字' is not assignable to type '文字'.


==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser536727.ts (2 errors) ====
    function foo(f: (x: string) => string) {
        return f("");
    }
    var g = (x: string) => x + "blah";
    var x = () => g;
    foo(g);
    foo(() => g);
        ~~~~~~~
!!! error TS2345: Argument of type '() => (x: 文字) => 文字' is not assignable to parameter of type '(x: 文字) => 文字'.
!!! error TS2345:   Type '(x: 文字) => 文字' is not assignable to type '文字'.
    foo(x);
        ~
!!! error TS2345: Argument of type '() => (x: 文字) => 文字' is not assignable to parameter of type '(x: 文字) => 文字'.
!!! error TS2345:   Type '(x: 文字) => 文字' is not assignable to type '文字'.
    